Adapt to deploy